[gd_scene load_steps=4 format=3 uid="uid://c57q15chwj64c"]

[ext_resource type="Script" path="res://scripts/player/camera_rig.gd" id="1_qbdt1"]
[ext_resource type="Shader" path="res://assets/assets/shaders/forground_shader.gdshader" id="2_06wyr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1tamm"]
shader = ExtResource("2_06wyr")
shader_parameter/MULTIPLIER = 0.95
shader_parameter/SCALE = 0.85
shader_parameter/SOFTNESS = 0.45
shader_parameter/BASE_OPACITY = 1.0

[node name="CameraRig" type="Node3D"]
script = ExtResource("1_qbdt1")

[node name="base" type="Camera3D" parent="."]
cull_mask = 1047552

[node name="background_viewport_container" type="SubViewportContainer" parent="base"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="background_viewport" type="SubViewport" parent="base/background_viewport_container"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="background" type="Camera3D" parent="base/background_viewport_container/background_viewport"]
cull_mask = 1047553

[node name="foreground_viewport_container" type="SubViewportContainer" parent="base"]
material = SubResource("ShaderMaterial_1tamm")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="foreground_viewport" type="SubViewport" parent="base/foreground_viewport_container"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="foreground" type="Camera3D" parent="base/foreground_viewport_container/foreground_viewport"]
cull_mask = 1047554
